--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>Project Repo Test</title>
+</head>
+
+<body>
+  <h1>Hello World!</h1>
+</body>
+
+</html>
